--- a/post.html
+++ b/post.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
             <div id="post">
                 <h1>Este es el tittulo atractivo e interesante del post</h1>
                 <p>y este es el parrafo de inicio donde vamos a explicar 
