--- a/post.html
+++ b/post.html
@@ -9,6 +9,10 @@
                 <h1>Este es el tittulo atractivo e interesante del post</h1>
                 <p>y este es el parrafo de inicio donde vamos a explicar 
                     las cosas incereibles que se pueden hacer con ramas</p>
+                <p>los blogs son en la actualidad una de las
+                    mejores formas de compartir tus ideas, 
+                    al menor claro que tengas tus habilidades comunicatvias
+                    altamente desarrolladas para hacerlo en Youtube</p>    
             </div>    
         </div>     
     </body>
