--- a/post.html
+++ b/post.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog 
-                <span id="tagline">Tu blog de git hub</span>
+                <span id="tagline">Tu blog de git hub maestro</span>
             </div>    
             <div id="post">
                 <h1>Este es el tittulo atractivo e interesante del post</h1>
@@ -17,7 +17,8 @@
                     mejores formas de compartir tus ideas, 
                     al menor claro que tengas tus habilidades comunicatvias
                     altamente desarrolladas para hacerlo en Youtube</p>    
-            </div>    
+                <p>suscribete a nuestro newsteller y dale like</p>        
+                </div>    
         </div>     
     </body>
 </html>
