--- a/post.html
+++ b/post.html
@@ -6,6 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/tesla.png"/>
                 Hyperblog 
                 <span id="tagline">Tu blog de git hub cabecera</span>
             </div>    
