correccion en ortografia

--- a/post.html
+++ b/post.html
@@ -12,11 +12,11 @@
             </div>    
             <div id="post">
                 <h1>Este es el tittulo atractivo e interesante del post</h1>
-                <p>y este es el parrafo de inicio donde vamos a explicar 
+                <p>y este es el párrafo de inicio donde vamos a explicar 
                     las cosas incereibles que se pueden hacer con ramas</p>
                 <p>los blogs son en la actualidad una de las
                     mejores formas de compartir tus ideas, 
-                    al menor claro que tengas tus habilidades comunicatvias
+                    al menos claro que tengas tus habilidades comunicatvias
                     altamente desarrolladas para hacerlo en Youtube</p>    
                 <p>suscribete a nuestro newsteller y dale like</p>        
             </div>    
