--- a/post.html
+++ b/post.html
@@ -14,6 +14,7 @@
                 <h1>Este es el tittulo atractivo e interesante del post</h1>
                 <p>y este es el párrafo de inicio donde vamos a explicar 
                     las cosas incereibles que se pueden hacer con ramas</p>
+                <p><img src="imagenes/elbicho.jpg" width="100%"></p>    
                 <p>los blogs son en la actualidad una de las
                     mejores formas de compartir tus ideas, 
                     al menos claro que tengas tus habilidades comunicatvias
